@@ -6,7 +6,19 @@ plugins {
 
 group = 'com.suaki'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '14'
+
+tasks.withType(JavaCompile).all {
+	options.compilerArgs += ['--enable-preview']
+}
+
+tasks.withType(Test).all {
+	jvmArgs += '--enable-preview'
+}
+
+tasks.withType(JavaExec) {
+	jvmArgs += '--enable-preview'
+}
 
 configurations {
 	compileOnly {
